# FASTAPI

./: Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 70aac76e33f3_added_posts_table.py
api_fastapi/src/: config.py  database.py  main.py  models.py  schemas.py
tests/: test_api_fastapi.py
